# spotential

./: .gitignore  AGENT_LOCATION_TOOLS.md  AI_ASSISTANT_PLAN.md  CLAUDE.md  ML_ARCHITECTURE.md  README.md  ROADMAP.md  docker-compose.yaml
backend/: .dockerignore  Dockerfile  db.py  dependencies.py  limiter.py  main.py  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0c13696f57a8_change_tract_id_field_name_in_.py  1dea35ecc6d2_update_census_tract_model.py  2f902183fc1f_add_predictions_table.py  419eeeb588f2_fix_osm_id_type.py  5222da5cbb11_remove_fk_for_test.py  54a545016678_update_fk.py  74d46d28961a_upgrade_type_on_geometry.py  7d8945195f73_create_census_demographics_table.py  7ebc63e03fc1_add_business_table_import.py  a6cbaf239374_fix_import.py  ae6854e11f00_remove_dguid_col.py  b11924f0cd38_remove_optional_from_output_table.py  b3a38fd96105_add_geography_tables.py  b6f8dd0e48bd_add_business_table.py
backend/config/: business_type.py  census_constants.py  mlflow_config.py  osm.py
backend/models/: business.py  census.py  geography.py  model_outputs.py
backend/routers/: agent.py  business.py  census.py  location.py
backend/schema/: agent.py  business.py  geo_json.py  geography.py  ml_model.py  response.py
backend/scripts/analysis/: precompute_tracts.py
backend/scripts/business/: assign_tracts.py  (+1 more)
backend/service/: AgentService.py  AnalysisService.py  BusinessService.py  CensusService.py  GeographyService.py  OSMService.py  PredictionService.py  osm.py
backend/tests/: anthropic_stubs.py  conftest.py
(+64 files in other folders)
