[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.135.2",
    "geopandas>=1.1.3",
    "polars>=1.39.3",
    "psycopg2-binary>=2.9.11",
    "sqlmodel>=0.0.37",
]
