[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.135.2",
    "geoalchemy2>=0.18.4",
    "geopandas>=1.1.3",
    "httpx>=0.28.1",
    "joblib>=1.5.3",
    "mlflow>=3.11.1",
    "pandas<3",
    "polars>=1.39.3",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.8.0",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.48",
    "sqlmodel>=0.0.37",
    "xgboost>=3.2.0",
]
